# branchforge

./: .gitignore  .mcp.json  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/skills/: branchforge  branchforge-evaluate  branchforge-ideation  branchforge-orchestrator  branchforge-software  branching-deliberation
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: branchforge-report  branchforge-research
docs/: architecture.md  development.md  installation.md  usage.md
examples/: software_architecture.json
plugins/branchforge/.codex-plugin/: plugin.json
scripts/: install-agent.sh  install-claude-desktop.py  install-skill.sh
skills/branchforge/: SKILL.md
skills/branchforge-evaluate/: SKILL.md
skills/branchforge-evaluate/agents/: openai.yaml
skills/branchforge-ideation/: SKILL.md
skills/branchforge-ideation/agents/: openai.yaml
skills/branchforge-orchestrator/: SKILL.md
skills/branchforge-orchestrator/agents/: openai.yaml
skills/branchforge-report/: SKILL.md
skills/branchforge-report/agents/: openai.yaml
skills/branchforge-research/: SKILL.md
skills/branchforge-research/agents/: openai.yaml
skills/branchforge-software/: SKILL.md
skills/branchforge/agents/: openai.yaml
skills/branching-deliberation/: SKILL.md
src/branchforge/: __init__.py  cli.py  doctor.py  jsonutil.py  mcp_server.py  models.py  native.py  orchestrator.py  policy.py  providers.py  repository.py  store.py
tests/: test_branchforge.py  test_doctor.py  test_native.py  test_repository.py  test_skill.py
(+6 files in other folders)
